Make ns[C]String::AppendFloat locale-independent.  b=209569  r=jag  sr=bzbarsky